Add cancancan gem to the project.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,7 +40,7 @@ Style/DefWithParentheses:
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 CyclomaticComplexity:
-  Max: 9
+  Enabled: true
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
