Add implementation to show most voted posts on main page.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
+
 AllCops:
+  NewCops: enable
   Exclude:
     - "db/**/*"
-    - "bin/*" 
+    - "bin/*"
     - "config/**/*"
     - "Guardfile"
     - "Rakefile"
@@ -24,7 +26,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  ExcludedMethods: ["describe"]
   Max: 30
 
 Style/Documentation:
@@ -39,8 +41,6 @@ Style/DefWithParentheses:
   Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
-CyclomaticComplexity:
-  Enabled: true
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
