--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,6 @@
-
 AllCops:
-  NewCops: enable
   Exclude:
+    - "vendor/bundle/**/*"
     - "db/**/*"
     - "bin/*"
     - "config/**/*"
@@ -26,7 +25,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ["describe"]
+  ExcludedMethods: ['describe']
   Max: 30
 
 Style/Documentation:
