--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.2.1",
+    "jest": "^26.6.3",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0"
   },
