Recreate gemfile trying to fix issue with rubocop on branch.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,7 +1,9 @@
 inherit_from: .rubocop_todo.yml
 
 AllCops:
-  TargetRubyVersion: 3.0
+  SuggestExtensions: false
+  NewCops: enable
+
   Exclude:
     - "vendor/bundle/**/*"
     - "db/**/*"
@@ -28,7 +30,7 @@ Metrics/AbcSize:
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
-  ExcludedMethods: ['describe']
+  IgnoredMethods: ['describe']
   Max: 30
 
 Style/Documentation:
